implementation of the jwt authentication with concept of access and refresh token. - adding of the spring security dependency to the customer service - adding the oAuth0 dependency in the customer service in the pom file. - Creation of a some files classes and actual implementation of done.

--- a/customers-service/src/main/resources/application.yml
+++ b/customers-service/src/main/resources/application.yml
@@ -12,5 +12,11 @@ spring:
     properties:
       hibernate:
         format_sql: true
+  profiles:
+    active: customer
 server:
   port: 8081
+my:
+  app:
+    secret: "arollito123"
+    token_duration: 60
