--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: testDB
+    password: Nzonkem@237
     url: jdbc:mysql://localhost:3306/product_service
   jpa:
     properties:
@@ -15,3 +15,5 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  profiles:
+    active: product
